--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@stripe/stripe-js": "^1.54.2",
     "@supabase/auth-helpers-nextjs": "^0.7.3",
     "@supabase/auth-helpers-react": "^0.4.1",
+    "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/supabase-js": "^2.31.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "@types/uniqid": "^5.3.2",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "query-string": "^8.1.0",
+    "react": "^16.6.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-spinners": "^0.13.8",
@@ -30,6 +39,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
+    "uniqid": "^5.4.0",
     "zustand": "^4.3.9"
   }
 }
