--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-slider": "^1.1.2",
     "@stripe/stripe-js": "^1.54.2",
     "@supabase/auth-helpers-nextjs": "^0.7.3",
     "@supabase/auth-helpers-react": "^0.4.1",
@@ -28,7 +29,7 @@
     "next": "13.4.12",
     "postcss": "8.4.27",
     "query-string": "^8.1.0",
-    "react": "^16.6.0",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.3",
     "react-hot-toast": "^2.4.1",
@@ -40,6 +41,7 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "uniqid": "^5.4.0",
+    "use-sound": "^4.0.1",
     "zustand": "^4.3.9"
   }
 }
